--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">test 3</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 34</li>
-            <li class="list-group-item">Email: <a href="mailto:test3@test.com">test3@test.com</a></li>
-            <li class="list-group-item">Office number: 4</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Test</h2>
+        <h2 class="card-title">Travis</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 334</li>
-            <li class="list-group-item">Email: <a href="mailto:test@testing.com">test@testing.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/tester1" target="_blank" rel="noopener noreferrer">tester1</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">test 2</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 22</li>
-            <li class="list-group-item">Email: <a href="mailto:test2@test.com">test2@test.com</a></li>
-            <li class="list-group-item">School: test college</li>
+            <li class="list-group-item">ID: 7</li>
+            <li class="list-group-item">Email: <a href="mailto:travi@travi.com">travi@travi.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/travibavi" target="_blank" rel="noopener noreferrer">travibavi</a></li>
         </ul>
     </div>
 </div>
