--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Travis</h2>
+        <h2 class="card-title">Test 3</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:test3@test.com">test3@test.com</a></li>
+            <li class="list-group-item">Office number: 11</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Test</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 7</li>
-            <li class="list-group-item">Email: <a href="mailto:travi@travi.com">travi@travi.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/travibavi" target="_blank" rel="noopener noreferrer">travibavi</a></li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:test@test.com">test@test.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/testing" target="_blank" rel="noopener noreferrer">testing</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Test 2</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:test2@test.com">test2@test.com</a></li>
+            <li class="list-group-item">School: Test University</li>
         </ul>
     </div>
 </div>
